Create navbar,hero section and project cards using components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,32 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import "../styles/global.css";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Navbar from "../components/Navbar.astro";
+import Hero from "../components/Hero.astro";
+import About from "../components/About.astro";
+import Project from "../components/Project.astro";
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<Navbar />
+<Hero />
+<h3 class="text-2xl m-5">Progetti</h3>
+<section>
+  <Project
+    id="project-1"
+    image="img-1.jpg"
+    title="Progetto 1"
+    description="Descrizione del primo progetto"
+  />
+  <Project
+    id="project-2"
+    image="img-2.jpg"
+    title="Progetto 2"
+    description="Descrizione del secondo progetto"
+  />
+  <Project
+    id="project-3"
+    image="img-3.jpg"
+    title="Progetto 3"
+    description="Descrizione del terzo progetto"
+  />
+</section>
