Fixed margin and class

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -5,7 +5,7 @@ const bgStyle = `background-image: url('${image}')`;
 
 <div
   id={id}
-  class="flex items-center justify-center h-lvh bg-project-1 transform transition-all duration-1000 hover:scale-110 cursor-pointer"
+  class="flex items-center justify-center h-lvh transform transition-all duration-1000 hover:scale-110 cursor-pointer"
   style={bgStyle}
 >
   <div class="text-center text-white">
