--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Project from "../components/Project.astro";
 
 <Navbar />
 <Hero />
-<h3 class="text-2xl m-5">Progetti</h3>
+<h3 class="text-2xl ml-5 mb-12">Progetti</h3>
 <section>
   <Project
     id="project-1"
