--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,6 +2,7 @@
   <nav class="col-span-12 flex justify-between mx-5 py-4">
     <ul class="mt-2 text-xl cursor-pointer">
       <li>about me</li>
+      <li>curriculum</li>
       <li>progetti</li>
       <li>servizi</li>
       <li>contatti</li>
