--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,14 @@ import "../styles/global.css";
 
 import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
+import Firstcalltoaction from "../components/Firstcalltoaction.astro";
 import About from "../components/About.astro";
 import Project from "../components/Project.astro";
 ---
 
 <Navbar />
 <Hero />
+<Firstcalltoaction />
 <h3 class="text-2xl ml-5 mb-12">Progetti</h3>
 <section>
   <Project
