--- a/src/components/Firstcalltoaction.astro
+++ b/src/components/Firstcalltoaction.astro
@@ -9,7 +9,7 @@
       <button
         type="button"
         class="text-white bg-black rounded-full px-2 py-0.5 mt-2 text-center"
-        >Scopri <span class="material-symbols-outlined"> arrow_right </span>
+        >Scopri<span class="material-symbols-outlined"> chevron_right </span>
       </button>
     </div>
   </div>
