--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import Firstcalltoaction from "../components/Firstcalltoaction.astro";
+import Service from "../components/Service.astro";
+
 import About from "../components/About.astro";
 import Project from "../components/Project.astro";
 ---
@@ -11,24 +13,34 @@ import Project from "../components/Project.astro";
 <Navbar />
 <Hero />
 <Firstcalltoaction />
-<h3 class="text-2xl ml-5 mb-12">Progetti</h3>
+<h3 class="text-2xl ml-5 mb-12">Servizi</h3>
 <section>
-  <Project
-    id="project-1"
+  <Service
+    id="service-1"
     image="img-1.jpg"
-    title="Progetto 1"
-    description="Descrizione del primo progetto"
+    title="WEB DESIGN"
+    description="Descrizione del primo servizio"
   />
-  <Project
-    id="project-2"
-    image="img-2.jpg"
-    title="Progetto 2"
-    description="Descrizione del secondo progetto"
-  />
-  <Project
-    id="project-3"
-    image="img-3.jpg"
-    title="Progetto 3"
-    description="Descrizione del terzo progetto"
-  />
+
+  <h3 class="text-2xl ml-5 mb-12">Progetti</h3>
+  <section>
+    <Project
+      id="project-1"
+      image="img-1.jpg"
+      title="Progetto 1"
+      description="Descrizione del primo progetto"
+    />
+    <Project
+      id="project-2"
+      image="img-2.jpg"
+      title="Progetto 2"
+      description="Descrizione del secondo progetto"
+    />
+    <Project
+      id="project-3"
+      image="img-3.jpg"
+      title="Progetto 3"
+      description="Descrizione del terzo progetto"
+    />
+  </section>
 </section>
