Added projets component

--- a/src/components/Firstcalltoaction.astro
+++ b/src/components/Firstcalltoaction.astro
@@ -1,5 +1,5 @@
 <div class="grid grid-cols-12 grid-rows-2 gap-3">
-  <div class="col-start-2 col-end-9 gap-4 flex flex-col text-xl">
+  <div class="col-start-2 col-end-7 gap-2 flex flex-col text-xl">
     <h2>
       Aiuto imprenditori e realt&agrave locali a creare e migliorare la propria
       presenza nel digital così da aumentare credibilit&agrave e vendite
@@ -8,8 +8,8 @@
     <div>
       <button
         type="button"
-        class="text-white bg-black rounded-full px-2 py-0.5 mt-2 text-center"
-        >Scopri<span class="material-symbols-outlined"> chevron_right </span>
+        class="text-white bg-black rounded-full px-6 py-2 mt-2 text-center"
+        >Scopri
       </button>
     </div>
   </div>
