--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,19 +1,25 @@
 <header class="grid grid-cols-12 min-w-full">
-  <nav class="col-span-12 flex justify-between mx-5 py-4">
-    <ul class="mt-2 text-xl cursor-pointer">
-      <li>about me</li>
-      <li>curriculum</li>
-      <li>progetti</li>
-      <li>servizi</li>
-      <li>contatti</li>
+  <nav class="col-span-12 flex flex-col mx-5 py-4">
+    <span class="text-l leading-none flex justify-center"
+      ><a href="index">Simone Garofalo</a></span
+    >
+    <ul class="text-xl justify-end text-right">
+      <li>
+        <a href="#about" class="hover:underline cursor-pointer">about me</a>
+      </li>
+      <li>
+        <a href="#curriculum" class="hover:underline cursor-pointer"
+          >curriculum</a>
+      </li>
+      <li>
+        <a href="#progetti" class="hover:underline cursor-pointer">progetti</a>
+      </li>
+      <li>
+        <a href="#servizi" class="hover:underline cursor-pointer">servizi</a>
+      </li>
+      <li>
+        <a href="#contatti" class="hover:underline cursor-pointer">contatti</a>
+      </li>
     </ul>
-    <span class="text-4xl font-anton"><a href="index">ESSEDESIGN</a></span>
-    <div>
-      <button
-        type="button"
-        class="text-white bg-black rounded-full px-2 py-0.5 mt-2 text-center"
-        >Scopri</button
-      >
-    </div>
   </nav>
 </header>
