--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import Firstcalltoaction from "../components/Firstcalltoaction.astro";
 import Service from "../components/Service.astro";
+import Service2 from "../components/Service2.astro";
 
 import About from "../components/About.astro";
 import Project from "../components/Project.astro";
@@ -13,13 +14,25 @@ import Project from "../components/Project.astro";
 <Navbar />
 <Hero />
 <Firstcalltoaction />
-<h3 class="text-2xl ml-5 mb-12">Servizi</h3>
+<h3 class="text-5xl ml-5 mb-12">Servizi</h3>
 <section>
   <Service
     id="service-1"
     image="img-1.jpg"
     title="WEB DESIGN"
     description="Descrizione del primo servizio"
+  />
+  <Service2
+    id="service-2"
+    image="img-1.jpg"
+    title="BRANDING"
+    description="Descrizione del secondo servizio"
+  />
+  <Service
+    id="service-3"
+    image="img-1.jpg"
+    title="LANDING PAGE"
+    description="Descrizione del terzo servizio"
   />
 
   <h3 class="text-2xl ml-5 mb-12">Progetti</h3>
