--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,11 @@
-<div class="min-w-full grid grid-cols-12">
-  <div class="h-lvh col-start-2 col-end-12 flex items-center justify-start">
-    <div class="text-7xl overflow-hidden pb-6">
-      <span class="flex leading-loose">Ciao &#x1F44B;&#x1F3FC;</span>
+<div class="min-w-full grid grid-cols-12 mb-14">
+  <div class="h-auto col-start-2 col-end-12 flex items-center justify-start">
+    <div class="text-[98px] overflow-hidden pb-6">
+      <span class="flex leading-loose text-lg"
+        >Benvenuto &#x1F44B;&#x1F3FC;</span
+      >
       <span>Sono un</span>
-      <span class="text dinamic-text-content"></span>
+      <span class="text dinamic-text-content m-0 p-0 text-8xl"></span>
     </div>
   </div>
 </div>
