--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Limelight&family=Permanent+Marker&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,6 +20,21 @@ body {
 .text {
   position: relative;
   color: black;
+  margin: 0;
+  padding: 0;
+}
+
+#text-0 {
+  font-family: "Limelight", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+#text-1 {
+}
+#text-2 {
+  font-family: "Permanent Marker", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .text.dinamic-text-content::before {
