Added svg icons and adjusted hero layout

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,13 +9,14 @@
       </li>
       <li>
         <a href="#curriculum" class="hover:underline cursor-pointer"
-          >curriculum</a>
-      </li>
-      <li>
-        <a href="#progetti" class="hover:underline cursor-pointer">progetti</a>
+          >curriculum</a
+        >
       </li>
       <li>
         <a href="#servizi" class="hover:underline cursor-pointer">servizi</a>
+      </li>
+      <li>
+        <a href="#progetti" class="hover:underline cursor-pointer">progetti</a>
       </li>
       <li>
         <a href="#contatti" class="hover:underline cursor-pointer">contatti</a>
