--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -9,7 +9,7 @@ const bgStyle = `background-image: url('${image}')`;
   style={bgStyle}
 >
   <div class="text-center text-white">
-    <h3 class="text-5xl leading-relaxed font-bold">{title}</h3>
+    <h3 class="text-7xl leading-relaxed">{title}</h3>
     <p>{description}</p>
   </div>
 </div>
