--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -6,11 +6,27 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="h-[700px] grid grid-cols-12 mb-20">
   <div class="col-start-2 col-end-6 flex flex-col relative">
     <h3
-      class="absolute top-0 left-0 text-2xl cursor-pointer hover:text-orange-600"
+      class="absolute top-0 left-0 text-5xl cursor-pointer trasform duration-500 hover:text-orange-400"
     >
       {title}
     </h3>
     <p class="absolute bottom-0 right-0 text-end text-sm mr-5">{description}</p>
   </div>
-  <div id={id} class="col-span-6 bg-orange-300" style={bgStyle}></div>
+  <div
+    id={id}
+    class="col-span-6 relative brightness-50 transition duration-1000 hover:brightness-100 cursor-pointer"
+    style={bgStyle}
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="100px"
+      viewBox="0 -960 960 960"
+      width="100px"
+      fill="white"
+      class="absolute bottom-5 right-5"
+      ><path
+        d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"
+      ></path></svg
+    >
+  </div>
 </div>
