--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Project from "../components/Project.astro";
 <Navbar />
 <Hero />
 <Firstcalltoaction />
-<h3 class="text-5xl ml-5 mb-12">Servizi</h3>
+<h3 class="text-9xl ml-5 my-20">Servizi</h3>
 <section>
   <Service
     id="service-1"
@@ -35,24 +35,24 @@ import Project from "../components/Project.astro";
     description="Descrizione del terzo servizio"
   />
 
-  <h3 class="text-2xl ml-5 mb-12">Progetti</h3>
+  <h3 class="text-9xl ml-5 my-20">Progetti</h3>
   <section>
     <Project
       id="project-1"
       image="img-1.jpg"
-      title="Progetto 1"
+      title="PROGETTO 1"
       description="Descrizione del primo progetto"
     />
     <Project
       id="project-2"
       image="img-2.jpg"
-      title="Progetto 2"
+      title="PROGETTO 2"
       description="Descrizione del secondo progetto"
     />
     <Project
       id="project-3"
       image="img-3.jpg"
-      title="Progetto 3"
+      title="PROGETTO 3"
       description="Descrizione del terzo progetto"
     />
   </section>
