--- a/src/components/Firstcalltoaction.astro
+++ b/src/components/Firstcalltoaction.astro
@@ -1,5 +1,5 @@
 <div class="grid grid-cols-12 grid-rows-2 gap-3">
-  <div class="col-start-2 col-end-7 gap-2 flex flex-col text-xl">
+  <div class="col-start-2 col-end-8 gap-2 flex flex-col text-xl">
     <h2>
       Aiuto imprenditori e realt&agrave locali a creare e migliorare la propria
       presenza nel digital così da aumentare credibilit&agrave e vendite
@@ -8,13 +8,20 @@
     <div>
       <button
         type="button"
-        class="text-white bg-black rounded-full px-6 py-2 mt-2 text-center"
-        >Scopri
+        class="text-white bg-black flex items-center justify-center gap-1 rounded-full pl-6 pr-3 py-2 mt-2 text-center"
+        ><span>Scopri </span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="30px"
+          viewBox="0 -960 960 960"
+          width="30px"
+          fill="#ffffff"><path d="M400-280v-400l200 200-200 200Z"></path></svg
+        >
       </button>
     </div>
   </div>
   <div class="col-start-9 col-end-12 row-start-2 text-end">
-    Sono specializzato nella creazione di siti web, landing page, UX/UI e brand
-    design.
+    Sono specializzato nella <br />creazione di siti web, landing page, UX/UI e
+    brand design.
   </div>
 </div>
