Selected imgs test

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,13 +18,13 @@ import Project from "../components/Project.astro";
 <section>
   <Service
     id="service-1"
-    image="img-1.jpg"
+    image="web-design.jpg"
     title="WEB DESIGN"
     description="Descrizione del primo servizio"
   />
   <Service2
     id="service-2"
-    image="img-1.jpg"
+    image="branding.jpg"
     title="BRANDING"
     description="Descrizione del secondo servizio"
   />
@@ -39,19 +39,19 @@ import Project from "../components/Project.astro";
   <section>
     <Project
       id="project-1"
-      image="img-1.jpg"
+      image="moda.jpg"
       title="PROGETTO 1"
       description="Descrizione del primo progetto"
     />
     <Project
       id="project-2"
-      image="img-2.jpg"
+      image="arredo.jpg"
       title="PROGETTO 2"
       description="Descrizione del secondo progetto"
     />
     <Project
       id="project-3"
-      image="img-3.jpg"
+      image="beauty.jpg"
       title="PROGETTO 3"
       description="Descrizione del terzo progetto"
     />
