Replaced services img

--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -14,7 +14,7 @@ const bgStyle = `background-image: url('${image}')`;
   </div>
   <div
     id={id}
-    class="col-span-6 relative brightness-50 transition duration-1000 hover:brightness-100 cursor-pointer"
+    class="col-span-6 object-cover relative brightness-50 transition duration-1000 hover:brightness-75 cursor-pointer"
     style={bgStyle}
   >
     <svg
