--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Project from "../components/Project.astro";
   />
   <Service
     id="service-3"
-    image="img-1.jpg"
+    image="landing-page.jpg"
     title="LANDING PAGE"
     description="Descrizione del terzo servizio"
   />
