--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,46 +14,33 @@ import Project from "../components/Project.astro";
 <Navbar />
 <Hero />
 <Firstcalltoaction />
-<h3 class="text-9xl ml-5 my-20">Servizi</h3>
+<h3 class="text-9xl ml-5 mt-28 mb-20">Servizi</h3>
 <section>
-  <Service
-    id="service-1"
-    image="web-design.jpg"
-    title="WEB DESIGN"
-    description="Descrizione del primo servizio"
-  />
-  <Service2
-    id="service-2"
-    image="branding.jpg"
-    title="BRANDING"
-    description="Descrizione del secondo servizio"
-  />
-  <Service
-    id="service-3"
-    image="landing-page.jpg"
-    title="LANDING PAGE"
-    description="Descrizione del terzo servizio"
-  />
-
-  <h3 class="text-9xl ml-5 my-20">Progetti</h3>
-  <section>
-    <Project
-      id="project-1"
-      image="moda.jpg"
-      title="PROGETTO 1"
-      description="Descrizione del primo progetto"
-    />
-    <Project
-      id="project-2"
-      image="arredo.jpg"
-      title="PROGETTO 2"
-      description="Descrizione del secondo progetto"
-    />
-    <Project
-      id="project-3"
-      image="beauty.jpg"
-      title="PROGETTO 3"
-      description="Descrizione del terzo progetto"
-    />
-  </section>
+  <Service id="service-1" image="web-design.jpg" title="WEB DESIGN" />
+  <Service2 id="service-2" image="branding.jpg" title="BRANDING" />
+  <Service id="service-3" image="landing-page.jpg" title="LANDING PAGE" />
 </section>
+
+<h3 class="text-9xl ml-5 mt-28 mb-20">Progetti</h3>
+<section>
+  <Project
+    id="project-1"
+    image="moda.jpg"
+    title="PROGETTO 1"
+    description="Descrizione del primo progetto"
+  />
+  <Project
+    id="project-2"
+    image="arredo.jpg"
+    title="PROGETTO 2"
+    description="Descrizione del secondo progetto"
+  />
+  <Project
+    id="project-3"
+    image="beauty.jpg"
+    title="PROGETTO 3"
+    description="Descrizione del terzo progetto"
+  />
+</section>
+
+<h3 class="text-9xl ml-5 mt-28 mb-20">Contatti</h3>
