--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -6,11 +6,10 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="h-[700px] grid grid-cols-12 mb-20">
   <div class="col-start-2 col-end-6 flex flex-col relative">
     <h3
-      class="absolute top-0 left-0 text-5xl cursor-pointer trasform duration-500 hover:text-orange-400"
+      class="text-7xl absolute bottom-0 left-0 transform -rotate-90 origin-bottom-left cursor-pointer trasform duration-500 hover:text-orange-400"
     >
       {title}
     </h3>
-    <p class="absolute bottom-0 right-0 text-end text-sm mr-5">{description}</p>
   </div>
   <div
     id={id}
