--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -6,7 +6,7 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="h-[700px] grid grid-cols-12 mb-20">
   <div class="col-start-2 col-end-6 flex flex-col relative">
     <h3
-      class="text-7xl absolute bottom-0 left-0 transform -rotate-90 origin-bottom-left cursor-pointer trasform duration-500 hover:text-orange-400"
+      class="text-8xl absolute bottom-0 left-0 transform -rotate-90 origin-bottom-left whitespace-nowrap overflow-hidden max-h-full cursor-pointer trasform duration-500 hover:text-orange-400"
     >
       {title}
     </h3>
