--- a/src/components/Service2.astro
+++ b/src/components/Service2.astro
@@ -23,7 +23,7 @@ const bgStyle = `background-image: url('${image}')`;
   </div>
   <div class="col-start-9 col-end-12 flex flex-col relative">
     <h3
-      class="text-7xl absolute bottom-0 right-0 transform rotate-90 origin-bottom-right cursor-pointer trasform duration-500 hover:text-orange-400"
+      class="text-8xl absolute top-0 right-0 transform origin-top-right [writing-mode:vertical-rl] cursor-pointer trasform duration-500 hover:text-orange-400"
     >
       {title}
     </h3>
