Created contact component

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,6 +1,27 @@
-<div class="h-lvh grid grid-cols-12 grid-rows-2">
+<div class="h-lvh grid grid-cols-12">
+  <div class="h-full col-start-2 col-end-6">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="400px"
+      viewBox="0 -960 960 960"
+      width="400px"
+      fill="#000000"
+      ><path d="M360-200v-80h264L160-744l56-56 464 464v-264h80v400H360Z"
+      ></path></svg
+    >
+  </div>
   <div class="col-start-7 col-end-12 text-end">
     <h3 class="text-7xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
   </div>
-  <div class="h-full col-start-2 col-end-6"></div>
+  <div class="grid grid-cols-12"></div>
+  <div class="col-start-2 col-end-8 flex flex-col">
+    TEL
+    <span class="border-b-2 border-black text-end">3342655103</span>
+    MAIL
+    <span class="border-b-2 border-black text-end"
+      >simonegarofalo96@gmail.com</span
+    >
+    SOCIAL
+    <span class="border-b-2 border-black text-end"></span>
+  </div>
 </div>
