--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -3,13 +3,15 @@ const { title, description, image, id } = Astro.props;
 const bgStyle = `background-image: url('${image}')`;
 ---
 
-<div
-  id={id}
-  class="flex items-center justify-center h-lvh transform transition-all duration-1000 hover:scale-110 cursor-pointer"
-  style={bgStyle}
->
-  <div class="text-center text-white">
-    <h3 class="text-7xl leading-relaxed">{title}</h3>
-    <p>{description}</p>
+<div class="overflow-hidden cursor-pointer">
+  <div
+    id={id}
+    class="flex items-center justify-center h-lvh transform transition-all duration-1000 hover:scale-110"
+    style={bgStyle}
+  >
+    <div class="text-center text-white">
+      <h3 class="text-7xl leading-relaxed">{title}</h3>
+      <p>{description}</p>
+    </div>
   </div>
 </div>
