--- a/src/components/Service2.astro
+++ b/src/components/Service2.astro
@@ -6,7 +6,7 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="h-[700px] grid grid-cols-12 mb-20">
   <div
     id={id}
-    class="col-start-2 col-end-8 brightness-50 transition duration-1000 hover:brightness-75 cursor-pointer"
+    class="col-start-2 col-end-8 brightness-50 transition duration-700 hover:brightness-75 cursor-pointer"
     style={bgStyle}
   >
     <svg
@@ -21,7 +21,7 @@ const bgStyle = `background-image: url('${image}')`;
       ></path></svg
     >
   </div>
-  <div class="col-start-9 col-end-12 flex flex-col relative">
+  <div class="col-start-9 col-end-12 relative">
     <h3
       class="text-8xl absolute top-0 right-0 transform origin-top-right [writing-mode:vertical-rl] cursor-pointer trasform duration-500 hover:text-orange-400"
     >
