Updated navbar menu

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,25 +1,22 @@
 <header class="grid grid-cols-12 min-w-full">
-  <nav class="col-span-12 flex flex-col mx-5 py-4">
-    <span class="text-l leading-none flex justify-center"
-      ><a href="index">Simone Garofalo</a></span
-    >
-    <ul class="text-xl justify-end text-right">
+  <nav class="col-start-2 col-end-12 flex flex-col">
+    <ul class="text-6xl justify-end text-right">
       <li>
-        <a href="#about" class="hover:underline cursor-pointer">about me</a>
+        <a href="#about" class="hover:underline cursor-pointer">ABOUT</a>
       </li>
       <li>
         <a href="#curriculum" class="hover:underline cursor-pointer"
-          >curriculum</a
+          >CURRICULUM</a
         >
       </li>
       <li>
-        <a href="#servizi" class="hover:underline cursor-pointer">servizi</a>
+        <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
       </li>
       <li>
-        <a href="#progetti" class="hover:underline cursor-pointer">progetti</a>
+        <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a>
       </li>
       <li>
-        <a href="#contatti" class="hover:underline cursor-pointer">contatti</a>
+        <a href="#contatti" class="hover:underline cursor-pointer">CONTATTI</a>
       </li>
     </ul>
   </nav>
