Updated hero section and navbar

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,27 +1,11 @@
-<div class="grid grid-cols-12 grid-rows-2 gap-3">
-  <div class="col-start-2 col-end-8 gap-2 flex flex-col text-xl">
+<div class="h-[600px] grid grid-cols-12 gap-3">
+  <div class="col-span-12 flex items-end text-9xl ml-5">
     <h2>
-      Aiuto imprenditori e realt&agrave locali a creare e migliorare la propria
-      presenza nel digital così da aumentare credibilit&agrave e vendite
-      attraverso il Web Design.
+      SONO UN WEB DESIGNER FREELANCE DI MILANO <br />
     </h2>
-    <div>
-      <button
-        type="button"
-        class="text-white bg-black flex items-center justify-center gap-1 rounded-full pl-6 pr-3 py-2 mt-2 text-center"
-        ><span>Scopri </span>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          height="30px"
-          viewBox="0 -960 960 960"
-          width="30px"
-          fill="#ffffff"><path d="M400-280v-400l200 200-200 200Z"></path></svg
-        >
-      </button>
-    </div>
   </div>
-  <div class="col-start-9 col-end-12 row-start-2 text-end">
+  <!--   <div class="row-span-2 col-start-8 col-end-12 text-3xl text-end">
     Sono specializzato nella <br />creazione di siti web, landing page, UX/UI e
     brand design.
-  </div>
+  </div> -->
 </div>
