--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<div class="min-w-full grid grid-cols-12 mb-14">
+<!-- <div class="min-w-full grid grid-cols-12">
   <div class="h-auto col-start-2 col-end-12 flex items-center justify-start">
     <div class="text-[98px] overflow-hidden pb-6">
       <span class="flex leading-loose text-lg"
@@ -11,3 +11,4 @@
 </div>
 
 <script src="../scripts/animation-hero.js"></script>
+ -->
