--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,23 +1,44 @@
-<header class="grid grid-cols-12 min-w-full">
-  <nav class="col-start-2 col-end-12 flex flex-col">
-    <ul class="text-6xl justify-end text-right">
-      <li>
-        <a href="#about" class="hover:underline cursor-pointer">ABOUT</a>
-      </li>
-      <li>
-        <a href="#curriculum" class="hover:underline cursor-pointer"
-          >CURRICULUM</a
-        >
-      </li>
-      <li>
-        <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
-      </li>
-      <li>
-        <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a>
-      </li>
-      <li>
-        <a href="#contatti" class="hover:underline cursor-pointer">CONTATTI</a>
-      </li>
-    </ul>
+<header class="grid grid-cols-12">
+  <nav class="col-start-2 col-end-12 flex flex-col h-14 my-12">
+    <div class="text-lg">logo</div>
+    <div
+      id="menu-btn"
+      class="flex flex-col gap-3 justify-center items-end cursor-pointer"
+    >
+      <span class="bg-black h-1 w-12"></span>
+      <span class="bg-black h-1 w-12"></span>
+    </div>
   </nav>
+  <div class="hidden h-lvh w-lvw fixed z-10 grid grid-cols-12 bg-orange-400">
+    <div class="col-start-2 col-end-12 flex flex-col my-14">
+      <div
+        id="menu-btn"
+        class="col-start-9 col-end-12 flex flex-col gap-3 justify-center items-end cursor-pointer h-14 mb-12"
+      >
+        <span class="bg-black h-1 w-12"></span>
+        <span class="bg-black h-1 w-12"></span>
+      </div>
+      <ul class="text-6xl justify-end text-right py-5">
+        <li>
+          <a href="#about" class="hover:underline cursor-pointer">ABOUT</a>
+        </li>
+        <li>
+          <a href="#curriculum" class="hover:underline cursor-pointer"
+            >CURRICULUM</a
+          >
+        </li>
+        <li>
+          <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
+        </li>
+        <li>
+          <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a
+          >
+        </li>
+        <li>
+          <a href="#contatti" class="hover:underline cursor-pointer">CONTATTI</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
 </header>
