--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -4,7 +4,7 @@ const bgStyle = `background-image: url('${image}')`;
 ---
 
 <div class="h-[700px] grid grid-cols-12 mb-20">
-  <div class="col-start-2 col-end-6 flex items-baseline">
+  <div class="col-start-2 col-end-4 flex items-baseline">
     <h3
       class="text-8xl transform [writing-mode:vertical-rl] rotate-180 whitespace-nowrap cursor-pointer duration-500 hover:text-orange-400"
     >
@@ -13,7 +13,7 @@ const bgStyle = `background-image: url('${image}')`;
   </div>
   <div
     id={id}
-    class="col-span-6 object-cover relative brightness-50 transition duration-700 hover:brightness-75 cursor-pointer"
+    class="col-start-4 col-end-12 object-cover relative brightness-50 transition duration-700 hover:brightness-75 cursor-pointer"
     style={bgStyle}
   >
     <svg
