Completed hero section

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,11 +1,13 @@
-<div class="h-[600px] grid grid-cols-12 gap-3">
+<div id="about" class="h-[600px] grid grid-cols-12 gap-3">
   <div class="col-span-12 flex items-end text-9xl ml-5">
     <h2>
       SONO UN WEB DESIGNER FREELANCE DI MILANO <br />
     </h2>
   </div>
-  <!--   <div class="row-span-2 col-start-8 col-end-12 text-3xl text-end">
+</div>
+<div class="grid grid-cols-12 mt-10 mb-24">
+  <div class="col-start-8 col-end-12 text-3xl text-end">
     Sono specializzato nella <br />creazione di siti web, landing page, UX/UI e
     brand design.
-  </div> -->
+  </div>
 </div>
