--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,23 +1,35 @@
-<header class="grid grid-cols-12">
-  <nav class="col-start-2 col-end-12 flex flex-col h-14 my-12">
-    <div class="text-lg">logo</div>
-    <div
-      id="menu-btn"
-      class="flex flex-col gap-3 justify-center items-end cursor-pointer"
-    >
-      <span class="bg-black h-1 w-12"></span>
-      <span class="bg-black h-1 w-12"></span>
-    </div>
-  </nav>
-  <div class="hidden h-lvh w-lvw fixed z-10 grid grid-cols-12 bg-orange-400">
-    <div class="col-start-2 col-end-12 flex flex-col my-14">
+<header>
+  <nav class="grid grid-cols-12 h-14 w-full my-12 fixed z-10">
+    <div class="col-start-2 col-end-12 flex items-center justify-between">
+      <div class="text-lg">logo</div>
       <div
-        id="menu-btn"
-        class="col-start-9 col-end-12 flex flex-col gap-3 justify-center items-end cursor-pointer h-14 mb-12"
+        id="menu-toggle"
+        class="flex flex-col gap-3 justify-center items-end cursor-pointer h-16 w-16"
       >
         <span class="bg-black h-1 w-12"></span>
         <span class="bg-black h-1 w-12"></span>
       </div>
+    </div>
+  </nav>
+
+  <div
+    id="menu"
+    class="fixed h-screen w-screen top-0 left-0 z-10 grid grid-cols-12 bg-gradient-to-r from-gray-950 text-white opacity-0 pointer-events-none transform -translate-y-full transition-all duration-500 ease-in-out"
+  >
+    <div class="col-start-2 col-end-12 flex flex-col my-14">
+      <div
+        class="hamburger relative flex flex-col gap-3 justify-center items-end h-14 mb-12"
+      >
+        <div id="menu-close" class="cursor-pointer h-16 w-16">
+          <span
+            class="bg-white h-1 w-12 absolute transform rotate-45 top-1/2 right-0 -translate-y-1/2"
+          ></span>
+          <span
+            class="bg-white h-1 w-12 absolute transform -rotate-45 top-1/2 right-0 -translate-y-1/2"
+          ></span>
+        </div>
+      </div>
+
       <ul class="text-6xl justify-end text-right py-5">
         <li>
           <a href="#about" class="hover:underline cursor-pointer">ABOUT</a>
@@ -42,3 +54,5 @@
     </div>
   </div>
 </header>
+
+<script src="/src/scripts/animation-navbar.js"></script>
