--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,4 +1,4 @@
-<div id="about" class="h-[600px] grid grid-cols-12 gap-3">
+<div id="about" class="h-svh grid grid-cols-12 gap-3">
   <div class="col-span-12 flex items-end text-9xl ml-5">
     <h2>
       SONO UN WEB DESIGNER FREELANCE DI MILANO <br />
