Connected section and navbar by a href

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 <header>
   <nav class="grid grid-cols-12 h-14 w-full my-12 fixed z-10">
     <div class="col-start-2 col-end-12 flex items-center justify-between">
-      <div class="text-lg">logo</div>
+      <div id="logo" class="text-lg"><a href="/">logo</a></div>
       <div
         id="menu-toggle"
         class="flex flex-col gap-3 justify-center items-end cursor-pointer h-16 w-16"
@@ -32,7 +32,7 @@
 
       <ul class="text-6xl justify-end text-right py-5">
         <li>
-          <a href="#about" class="hover:underline cursor-pointer">ABOUT</a>
+          <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
         </li>
         <li>
           <a href="#curriculum" class="hover:underline cursor-pointer"
