--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,12 @@
 <footer>
   <div class="h-80 grid grid-cols-12">
-    <div class="col-start-2 col-end-12 flex justify-center">
+    <div class="col-start-2 col-end-12 flex justify-between items-end p-8">
+      <span><a href="/">logo</a></span>
       <ul class="flex flex-row items-center gap-10 justify-center">
-        <a href="#servizi" class="hover:underline cursor-pointer">Servizi</a>
-        <a href="#progetti" class="hover:underline cursor-pointer">Progetti</a>
-        <a href="#contatti" class="hover:underline cursor-pointer">Contatti</a>
+        <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
+        <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
+        <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a>
+        <a href="#contatti" class="hover:underline cursor-pointer">CONTATTI</a>
       </ul>
     </div>
   </div>
