--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
   <div class="h-80 grid grid-cols-12">
-    <div class="col-start-2 col-end-12 flex justify-between items-end p-8">
+    <div class="col-start-2 col-end-12 flex justify-between items-end pb-8">
       <span><a href="/">logo</a></span>
       <ul class="flex flex-row items-center gap-10 justify-center">
         <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
