Fixed about layout

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@
 </div>
 <div class="grid grid-cols-12 mt-10 mb-24">
   <div class="col-start-8 col-end-12 text-3xl text-end">
-    Sono specializzato nella <br />creazione di siti web, landing page, UX/UI e
-    brand design.
+    Sono specializzato nella creazione di siti web, landing page, UX/UI e brand
+    design.
   </div>
 </div>
