--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -6,11 +6,11 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="overflow-hidden cursor-pointer">
   <div
     id={id}
-    class="flex items-center justify-center h-lvh transform transition-all duration-1000 hover:scale-110"
+    class="flex items-center justify-center h-lvh w-screen bg-cover bg-center bg-no-repeat transform transition-all duration-1000 hover:scale-110"
     style={bgStyle}
   >
     <div class="text-center text-white">
-      <h3 class="text-7xl leading-relaxed">{title}</h3>
+      <h3 class="text-6xl leading-relaxed">{title}</h3>
       <p>{description}</p>
     </div>
   </div>
