Fixed service2 component position

--- a/src/components/Service2.astro
+++ b/src/components/Service2.astro
@@ -6,7 +6,7 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="h-[700px] grid grid-cols-12 mb-20">
   <div
     id={id}
-    class="col-start-2 col-end-10 brightness-50 transition duration-700 hover:brightness-75 cursor-pointer"
+    class="col-start-2 col-end-10 relative brightness-50 transition duration-700 hover:brightness-75 cursor-pointer"
     style={bgStyle}
   >
     <svg
