Added mobile proprieties on project component

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -6,7 +6,7 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="overflow-hidden cursor-pointer">
   <div
     id={id}
-    class="flex items-center justify-center h-lvh w-screen bg-cover bg-center bg-no-repeat transform transition-all duration-1000 hover:scale-110"
+    class="flex items-center justify-center h-lvh w-screen bg-cover bg-center bg-no-repeat transform transition-all duration-1000 hover:scale-110 focus:scale-110 active:scale-110"
     style={bgStyle}
   >
     <div class="text-center text-white">
