Defined mobile media queries

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,20 +1,20 @@
 <div class="h-lvh grid grid-cols-12">
   <div class="h-full col-start-2 col-end-6">
     <svg
+      class="w-44 h-44 md:w-[350px] md:h-[350px]"
       xmlns="http://www.w3.org/2000/svg"
-      height="350px"
       viewBox="0 -960 960 960"
-      width="350px"
       fill="#000000"
       ><path d="M360-200v-80h264L160-744l56-56 464 464v-264h80v400H360Z"
       ></path></svg
     >
   </div>
   <div class="col-start-7 col-end-12 text-end">
-    <h3 class="text-7xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
+    <h3 class="text-3xl lg:text-7xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
   </div>
-  <div class="grid grid-cols-12"></div>
-  <div class="col-start-6 col-end-12 flex flex-col text-2xl">
+  <div
+    class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col text-sm md:text-xl"
+  >
     TELEFONO
     <a href="tel:+393342655103" class="border-b-2 border-black text-end pb-2"
       >+39 3342655103</a
