--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,10 @@
 <footer>
-  <div class="h-80 grid grid-cols-12">
+  <div class="h-30 md:h-80 grid grid-cols-12">
     <div class="col-start-2 col-end-12 flex justify-between items-end pb-8">
-      <span><a href="/">logo</a></span>
-      <ul class="flex flex-row items-center gap-10 justify-center">
+      <span class="hidden md:block"><a href="/">logo</a></span>
+      <ul
+        class="flex flex-row items-center gap-10 justify-center text-sm md:text-l"
+      >
         <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
         <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
         <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a>
