--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -6,7 +6,7 @@ const bgStyle = `background-image: url('${image}')`;
 <div class="h-[700px] grid grid-cols-12 mb-20">
   <div class="col-start-2 col-end-4 flex items-baseline">
     <h3
-      class="text-8xl transform [writing-mode:vertical-rl] rotate-180 whitespace-nowrap cursor-pointer duration-500 hover:text-orange-400"
+      class="text-6xl md:text-7xl lg:text-8xl transform [writing-mode:vertical-rl] rotate-180 whitespace-nowrap cursor-pointer duration-500 hover:text-orange-400"
     >
       {title}
     </h3>
