--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,12 +1,12 @@
 <div id="about" class="h-svh grid grid-cols-12 gap-3">
-  <div class="col-span-12 flex items-end text-9xl ml-5">
+  <div class="col-span-12 flex items-end text-7xl md:text-8xl lg:text-9xl ml-5">
     <h2>
       SONO UN WEB DESIGNER FREELANCE DI MILANO <br />
     </h2>
   </div>
 </div>
 <div class="grid grid-cols-12 mt-10 mb-24">
-  <div class="col-start-8 col-end-12 text-3xl text-end">
+  <div class="col-start-8 col-end-12 text-sm md:text-2xl text-end">
     specializzato nella creazione di siti web, landing page, UX/UI e brand
     design.
   </div>
