--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,9 @@
 <header>
   <nav class="grid grid-cols-12 h-14 w-full my-12 fixed z-10">
     <div class="col-start-2 col-end-12 flex items-center justify-between">
-      <div id="logo" class="text-lg"><a href="/">logo</a></div>
+      <div id="logo" class="text-xl md:text-2xl">
+        <a href="/">logo</a>
+      </div>
       <div
         id="menu-toggle"
         class="flex flex-col gap-3 justify-center items-end cursor-pointer h-16 w-16"
