Fixed some graphic bugs and error

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -29,6 +29,7 @@
     <div class="flex flex-row justify-end gap-5">
       <a href="https://www.linkedin.com/in/simone-garofalo/">
         <svg
+          class="hover:scale-110"
           width="30"
           height="30"
           viewBox="0 0 613 613"
@@ -42,6 +43,7 @@
       </a>
       <a href="https://github.com/simonegarofalo">
         <svg
+          class="hover:scale-110"
           width="30"
           height="30"
           viewBox="0 0 654 613"
