--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,12 @@
     <div class="col-start-2 col-end-12 flex justify-between items-end pb-8">
       <span class="hidden md:block"><a href="/">logo</a></span>
       <ul
-        class="flex flex-row items-center gap-10 justify-center text-sm md:text-l"
+        class="flex flex-row items-center gap-5 justify-center text-xs md:text-sm"
       >
         <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
+        <a href="#curriculum" class="hover:underline cursor-pointer"
+          >CURRICULUM</a
+        >
         <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
         <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a>
         <a href="#contatti" class="hover:underline cursor-pointer">CONTATTI</a>
