Created curriculum page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
         class="flex flex-row items-center gap-5 justify-center text-xs md:text-sm"
       >
         <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
-        <a href="#curriculum" class="hover:underline cursor-pointer"
+        <a href="/curriculum" class="hover:underline cursor-pointer"
           >CURRICULUM</a
         >
         <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
