--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -37,7 +37,7 @@
           <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
         </li>
         <li>
-          <a href="#curriculum" class="hover:underline cursor-pointer"
+          <a href="/curriculum" class="hover:underline cursor-pointer"
             >CURRICULUM</a
           >
         </li>
