Fixed any mobile layout component

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,5 +1,5 @@
-<div class="h-lvh grid grid-cols-12">
-  <div class="h-full col-start-2 col-end-6">
+<div class="h-[500px] grid grid-cols-12">
+  <div class="col-start-2 col-end-6">
     <svg
       class="w-44 h-44 md:w-[350px] md:h-[350px]"
       xmlns="http://www.w3.org/2000/svg"
