Completed cv page

--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -1,10 +1,9 @@
-<div class="h-lvh grid grid-cols-12 grid-rows-8">
-  <!--     <div
-      class="row-start-1 text-6xl ml-5 flex justify-end md:text-7xl lg:text-8xl transform -rotate-90"
-    >
-      <h1>Curriculum</h1>
-    </div> -->
-  <a href="/" class="col-start-2 flex items-end">
+<div class="h-lvh grid grid-cols-12 grid-rows-10">
+  <!--   <div
+    class="text-6xl flex justify-end md:text-7xl lg:text-8xl transform -rotate-90"
+  > -->
+  <h1 class="row-start-9 text-8xl transform -rotate-90">CURRICULUM</h1>
+  <a href="/" class="col-start-3 row-start-2 flex items-end">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       height="40px"
@@ -15,26 +14,34 @@
     >
   </a>
   <div class="col-start-6 col-end-13 text-end m-5">
-    <h2 class="text-5xl md:text-9xl">SIMONE GAROFALO</h2>
-    <p>Web designer & Front-end developer</p>
+    <h2 class="text-5xl md:text-9xl">Simone Garofalo</h2>
+    <p class="overflow-hidden">
+      Ciao &#x1F44B;&#x1F3FC; sono un <span class="text dinamic-text-content"
+        >Web designer & Front-end developer</span
+      >
+    </p>
   </div>
-  <div class="col-start-2 col-end-12 row-start-5">
+  <div class="col-start-3 col-end-12 row-start-5">
     <h3 class="text-3xl">SKILLS</h3>
-    <p class="text-xs">
+    <p class="text-xs md:text-sm">
       HTML5, CSS3, JAVASCRIPT, PHP, MYSQL, ASTRO JS, TAILWIND, GSAP, WORDPRESS,
       FIGMA, UX/UI
     </p>
   </div>
-  <div class="col-start-2 col-end-12 row-start-6">
+  <div class="col-start-3 col-end-12 row-start-6">
     <h3 class="text-3xl">FORMAZIONE</h3>
-    <h4>CORSO WEB DESIGNER</h4>
-    <p class="text-xs">Nuova Accademia delle Belle Arti di Milano (NABA)</p>
-    <h4>WEB DEVELOPMENT BOOTCAMP</h4>
-    <p class="text-xs">Udemy</p>
-    <h4>DIPLOMA IN AMMINISTRAZIONE, FINANZA E MARKETING</h4>
-    <p class="text-xs">IIS Luigi Einaudi</p>
-    <div class="col-start-2 col-end-6 row-start-7">
+    <h4>&#10045; CORSO WEB DESIGNER</h4>
+    <p class="text-xs pb-3">
+      Nuova Accademia delle Belle Arti di Milano (NABA)
+    </p>
+    <h4>&#10045; WEB DEVELOPMENT BOOTCAMP</h4>
+    <p class="text-xs pb-3">Udemy</p>
+    <h4>&#10045; DIPLOMA IN AMMINISTRAZIONE, FINANZA E MARKETING</h4>
+    <p class="text-xs pb-3">IIS Luigi Einaudi</p>
+    <div class="col-start-3 col-end-12 row-start-9">
       <h3 class="text-3xl">ESPERIENZE LAVORATIVE</h3>
+      <h4>&#10045; WEB DESIGNER FREELANCE</h4>
+      <p class="text-xs">Milano</p>
     </div>
   </div>
 </div>
