--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,3 +17,37 @@ body {
 .close {
   display: none;
 }
+
+.text {
+  position: relative;
+  color: #000000;
+}
+
+.text-content {
+  color: #000000;
+}
+
+.text.dinamic-text-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #ffffff;
+  border-left: 2px solid black;
+  animation: animate 5s steps(30) infinite;
+}
+
+@keyframes animate {
+  0% {
+    left: 0%;
+  }
+  40%,
+  60% {
+    left: calc(100% + 7px);
+  }
+  100% {
+    left: 0%;
+  }
+}
