Updated font-weight and layout in some section

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
   <div
     class="col-start-8 col-end-12 flex items-end text-sm md:text-xl text-end"
   >
-    specializzato nella creazione di siti web, landing page, UX/UI e brand
+    specializzato nella creazione di siti web, landing page, UX/UI e <br />brand
     design.
   </div>
   <div
