--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -10,7 +10,7 @@
     >
   </div>
   <div class="col-start-7 col-end-12 text-end">
-    <h3 class="text-3xl lg:text-7xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
+    <h3 class="text-3xl lg:text-6xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
   </div>
   <div
     class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col text-sm md:text-xl"
@@ -29,7 +29,7 @@
     <div class="flex flex-row justify-end gap-5">
       <a href="https://www.linkedin.com/in/simone-garofalo/">
         <svg
-          class="hover:scale-110"
+          class="hover:scale-110 cursor-pointer"
           width="30"
           height="30"
           viewBox="0 0 613 613"
