--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -10,7 +10,7 @@ const bgStyle = `background-image: url('${image}')`;
     style={bgStyle}
   >
     <div class="text-center text-white">
-      <h3 class="text-6xl md:text-7xl lg:text-8xl leading-relaxed">{title}</h3>
+      <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
       <p>{description}</p>
     </div>
   </div>
