--- a/src/components/Service2.astro
+++ b/src/components/Service2.astro
@@ -23,7 +23,7 @@ const bgStyle = `background-image: url('${image}')`;
   </div>
   <div class="col-start-10 col-end-12 relative">
     <h3
-      class="text-6xl md:text-7xl lg:text-8xl absolute top-0 right-0 transform origin-top-right [writing-mode:vertical-rl] cursor-pointer"
+      class="text-6xl font-light md:text-7xl lg:text-8xl absolute top-0 right-0 transform origin-top-right [writing-mode:vertical-rl] cursor-pointer"
     >
       {title}
     </h3>
