--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,18 +12,14 @@ import Footer from "../components/Footer.astro";
 
 <Navbar />
 <About />
-<h3 id="servizi" class="text-7xl md:text-8xl lg:text-9xl ml-5 mt-40 mb-20">
-  Servizi
-</h3>
+<h3 id="servizi" class="text-7xl md:text-8xl ml-5 mt-72 mb-20">Servizi</h3>
 <section>
   <Service id="service-1" image="web-design.jpg" title="WEB DESIGN" />
   <Service2 id="service-2" image="branding.jpg" title="BRANDING" />
   <Service id="service-3" image="landing-page.jpg" title="LANDING PAGE" />
 </section>
 
-<h3 id="progetti" class="text-7xl md:text-8xl lg:text-9xl ml-5 mt-28 mb-20">
-  Progetti
-</h3>
+<h3 id="progetti" class="text-7xl md:text-8xl ml-5 mt-36 mb-20">Progetti</h3>
 <section>
   <Project
     id="project-1"
@@ -45,8 +41,6 @@ import Footer from "../components/Footer.astro";
   />
 </section>
 
-<h3 id="contatti" class="text-7xl md:text-8xl lg:text-9xl ml-5 mt-28 mb-20">
-  Contatti
-</h3>
+<h3 id="contatti" class="text-7xl md:text-8xl ml-5 mt-36 mb-20">Contatti</h3>
 <Contact />
 <Footer />
