--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -29,7 +29,7 @@
     <div class="flex flex-row justify-end gap-5">
       <a href="https://www.linkedin.com/in/simone-garofalo/">
         <svg
-          class="hover:scale-110 cursor-pointer"
+          class="hover:scale-110"
           width="30"
           height="30"
           viewBox="0 0 613 613"
