Updated some structures and components

--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -13,7 +13,7 @@
       ><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"></path></svg
     >
   </a>
-  <div class="col-start-6 col-end-13 text-end m-5">
+  <div class="col-start-6 col-end-13 text-end mt-10 mr-5">
     <h2 class="text-5xl md:text-9xl">Simone Garofalo</h2>
     <p class="overflow-hidden">
       Ciao &#x1F44B;&#x1F3FC; sono un <span class="text dinamic-text-content"
@@ -22,26 +22,28 @@
     </p>
   </div>
   <div class="col-start-3 col-end-12 row-start-5">
-    <h3 class="text-3xl">SKILLS</h3>
-    <p class="text-xs md:text-sm">
-      HTML5, CSS3, JAVASCRIPT, PHP, MYSQL, ASTRO JS, TAILWIND, GSAP, WORDPRESS,
-      FIGMA, UX/UI
-    </p>
-  </div>
-  <div class="col-start-3 col-end-12 row-start-6">
-    <h3 class="text-3xl">FORMAZIONE</h3>
-    <h4>&#10045; CORSO WEB DESIGNER</h4>
-    <p class="text-xs pb-3">
-      Nuova Accademia delle Belle Arti di Milano (NABA)
-    </p>
-    <h4>&#10045; WEB DEVELOPMENT BOOTCAMP</h4>
-    <p class="text-xs pb-3">Udemy</p>
-    <h4>&#10045; DIPLOMA IN AMMINISTRAZIONE, FINANZA E MARKETING</h4>
-    <p class="text-xs pb-3">IIS Luigi Einaudi</p>
-    <div class="col-start-3 col-end-12 row-start-9">
-      <h3 class="text-3xl">ESPERIENZE LAVORATIVE</h3>
-      <h4>&#10045; WEB DESIGNER FREELANCE</h4>
-      <p class="text-xs">Milano</p>
+    <div>
+      <h3 class="text-3xl">SKILLS</h3>
+      <p class="text-xs md:text-sm pb-3">
+        HTML5, CSS3, JAVASCRIPT, PHP, MYSQL, ASTRO JS, TAILWIND, GSAP,
+        WORDPRESS, FIGMA, UX/UI
+      </p>
+    </div>
+    <div class="flex flex-col">
+      <h3 class="text-3xl">FORMAZIONE</h3>
+      <h4>&#10045; CORSO WEB DESIGNER</h4>
+      <p class="text-xs pb-3">
+        Nuova Accademia delle Belle Arti di Milano (NABA)
+      </p>
+      <h4>&#10045; WEB DEVELOPMENT BOOTCAMP</h4>
+      <p class="text-xs pb-3">Udemy</p>
+      <h4>&#10045; DIPLOMA IN AMMINISTRAZIONE, FINANZA E MARKETING</h4>
+      <p class="text-xs pb-3">IIS Luigi Einaudi</p>
+      <div class="flex flex-col">
+        <h3 class="text-3xl">ESPERIENZE LAVORATIVE</h3>
+        <h4>&#10045; WEB DESIGNER FREELANCE</h4>
+        <p class="text-xs">Milano</p>
+      </div>
     </div>
   </div>
 </div>
