--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,7 @@
 <div class="h-[500px] grid grid-cols-12">
-  <div class="col-start-2 col-end-6">
+  <div class="col-start-4 col-end-6">
     <svg
-      class="w-44 h-44 md:w-[350px] md:h-[350px]"
+      class="hidden lg:block md:w-[230px] md:h-[230px]"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 -960 960 960"
       fill="#000000"
@@ -10,19 +10,21 @@
     >
   </div>
   <div class="col-start-7 col-end-12 text-end">
-    <h3 class="text-3xl lg:text-6xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
+    <h3 class="text-4xl lg:text-6xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
   </div>
   <div
     class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col text-sm md:text-xl"
   >
     TELEFONO
-    <a href="tel:+393342655103" class="border-b-2 border-black text-end pb-2"
+    <a
+      href="tel:+393342655103"
+      class="border-b-2 border-black text-end pb-2 hover:font-bold"
       >+39 3342655103</a
     >
     MAIL
     <a
       href="mailto:simonegarofalo96@gmail.com"
-      class="border-b-2 border-black text-end pb-2"
+      class="border-b-2 border-black text-end pb-2 hover:font-bold"
       >simonegarofalo96@gmail.com</a
     >
     SOCIAL
