--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 
 import Navbar from "../components/Navbar.astro";
+import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
 import Service from "../components/Service.astro";
 import Service2 from "../components/Service2.astro";
@@ -11,15 +12,17 @@ import Footer from "../components/Footer.astro";
 ---
 
 <Navbar />
+<Hero />
+<h3 id="servizi" class="text-7xl md:text-8xl ml-5 mt-72 mb-20">ABOUT ME</h3>
 <About />
-<h3 id="servizi" class="text-7xl md:text-8xl ml-5 mt-72 mb-20">Servizi</h3>
+<h3 id="servizi" class="text-7xl md:text-8xl ml-5 mt-72 mb-20">SERVIZI</h3>
 <section>
   <Service id="service-1" image="web-design.jpg" title="WEB DESIGN" />
   <Service2 id="service-2" image="branding.jpg" title="BRANDING" />
   <Service id="service-3" image="landing-page.jpg" title="LANDING PAGE" />
 </section>
 
-<h3 id="progetti" class="text-7xl md:text-8xl ml-5 mt-36 mb-20">Progetti</h3>
+<h3 id="progetti" class="text-7xl md:text-8xl ml-5 mt-36 mb-20">PROGETTI</h3>
 <section>
   <Project
     id="project-1"
@@ -41,6 +44,6 @@ import Footer from "../components/Footer.astro";
   />
 </section>
 
-<h3 id="contatti" class="text-7xl md:text-8xl ml-5 mt-36 mb-20">Contatti</h3>
+<h3 id="contatti" class="text-7xl md:text-8xl ml-5 mt-36 mb-20">CONTATTI</h3>
 <Contact />
 <Footer />
